Edited Splash Screen, icon, version and name info

--- a/app/html/splash.html
+++ b/app/html/splash.html
@@ -4,10 +4,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>idkr</title>
+	<title>ECOclient</title>
 	<style>
 		body {
-			background-image: url("../imgs/splash.png");
+			background-image: url("../imgs/ecosplash.png");
 			background-attachment: fixed;
 			background-position: center;
 			background-repeat: no-repeat;
@@ -22,24 +22,15 @@
 		}
 
 		@font-face {
-			font-family: 'FFF Forward';
-			src: url('../fonts/FFF-Forward.ttf');
+			font-family: 'eco splash font';
+			src: url('../fonts/ecosplashfont.ttf');
 		}
 
 		* {
-			font-family: 'FFF Forward';
+			font-family: 'eco splash font';
 			font-size: 18px;
 			user-select: none;
-			color: white;
-			text-shadow:
-				-1px -1px 0 #202020,
-				1px -1px 0 #202020,
-				-1px 1px 0 #202020,
-				1px 1px 0 #202020,
-				-2px -2px 0 #202020,
-				2px -2px 0 #202020,
-				-2px 2px 0 #202020,
-				2px 2px 0 #202020;
+			color: #40a798;
 		}
 
 		#version {
@@ -65,7 +56,7 @@
 		<p id="details"></p>
 		<p id="message"></p>
 	</div>
-	<p id="version">idkr</p>
+	<p id="version">1.0.0</p>
 </body>
 
 </html>
